Fix collapsing of chart on 5y load

--- a/app/assets/stylesheets/components/_chart.scss
+++ b/app/assets/stylesheets/components/_chart.scss
@@ -50,8 +50,8 @@ body.negative .chart-choice.active {
 }
 
 .chart-loading {
-  width: 710;
-  height: 195;
+  width: 710px;
+  height: 195px;
   display: flex;
   justify-content: center;
   align-items: center;
